// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`holon-action-creators it should add action creator exports.: it should add action creator exports. 1`] = `
"
console.log('nothing going on here');

      ↓ ↓ ↓ ↓ ↓ ↓

console.log('nothing going on here');
export const foo = createAction(FOO);
"
`;

exports[`holon-action-creators it should add action creators.: it should add action creators. 1`] = `
"
console.log('nothing going on here');

      ↓ ↓ ↓ ↓ ↓ ↓

console.log('nothing going on here');
export const foo = createAction(FOO);
"
`;

exports[`holon-action-creators it should update action creator exports.: it should update action creator exports. 1`] = `
"
export const existingAction = createAction(EXISTING_ACTION);
console.log('nothing going on here');

      ↓ ↓ ↓ ↓ ↓ ↓

export const existingAction = createAction(EXISTING_ACTION);
console.log('nothing going on here');
export const nonExistingAction = createAction(NON_EXISTING_ACTION);
"
`;
